Updated native modules

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,1 +1,8 @@
-{}
+{
+  "appId": "mx.minu.app",
+  "appName": "Minu",
+  "bundledWebRuntime": false,
+  "webDir": "dist",
+  "plugins": { "Keyboard": { "resize": "none" } },
+  "server": { "iosScheme": "http", "androidScheme": "http" }
+}
