--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@capacitor/android": "^2.5.0",
     "@capacitor/core": "^2.5.0",
     "@capacitor/ios": "^2.5.0",
     "core-js": "^3.6.5",
+    "patch-package": "^6.4.7",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
