--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -1,14 +1,12 @@
 ext {
+    kotlinVersion = '1.4.32'
     minSdkVersion = 21
     compileSdkVersion = 30
     targetSdkVersion = 30
-    androidxActivityVersion = '1.2.0'
-    androidxAppCompatVersion = '1.2.0'
-    androidxCoordinatorLayoutVersion = '1.1.0'
-    androidxCoreVersion = '1.3.2'
+    androidxAppCompatVersion = '1.0.0'
+    androidConstraintVersion = '1.1.3'
     androidxFragmentVersion = '1.3.0'
-    junitVersion = '4.13.1'
-    androidxJunitVersion = '1.1.2'
-    androidxEspressoCoreVersion = '3.3.0'
+    junitVersion = '4.12'
+    androidxEspressoCoreVersion = '3.1.0'
     cordovaAndroidVersion = '7.0.0'
 }
