--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "eslint": "^7.25.0",
     "eslint-plugin-vue": "^6.2.2",
     "eslint-plugin-vue-scoped-css": "^1.1.0",
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "sass": "1.32.13",
+    "sass-loader": "^8.0.2",
+    "vue-loader": "^17.0.0"
   },
   "description": "minu Base Project"
 }
