--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
-    "postinstall": "patch-package"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@capacitor/android": "^2.5.0",
@@ -38,8 +37,8 @@
     "eslint-plugin-vue-scoped-css": "^1.1.0",
     "jest": "^27.3.1",
     "sass": "1.32.13",
-    "sass-loader": "^8.0.2",
-    "vue-loader": "^17.0.0"
+    "sass-loader": "^7.3.1",
+    "vue-loader": "^15.10.1"
   },
   "description": "minu Base Project"
 }
